# fami

./: .gitignore  README.md  pyproject.toml
fami/: __init__.py  __main__.py  archive.py  fami.py  instagram.py
tests/: test_init.py
