[tool.poetry]
name = "fami"
version = "0.1.0"
description = "Archive my images is for renaming, organising and mogrifying images."
authors = ["Melody Kelly <melody@melody.blue>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wand = "^0.6.13"
exifread = "^3.0.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
